--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ i#burguer:hover{
         left: 0;
         width: 100%;
         text-align: center;
+        text-transform: uppercase;
     }
     nav ul.active {
         display: flex; /* Exibir o menu quando a classe .active for adicionada */
@@ -155,7 +156,7 @@ i#burguer:hover{
     font-size: 1.8rem;
     margin-bottom: 15px;
 }
-.banner .btn-saiba-mais{
+.banner a.btn-saiba-mais{
     background: var(--orange);
     color: var(--white);
     text-decoration: none;
@@ -164,6 +165,10 @@ i#burguer:hover{
     border-radius: 10px;
     padding: 20px 30px;
     text-transform: uppercase;
+    transition: color 0.3s;
+}
+.banner a.btn-saiba-mais:hover{
+    background: var(--green);
 }
 @media (max-width: 700px){
     .banner h1{font-size: 2rem; padding: 10px;}
@@ -288,6 +293,10 @@ div.service div.card a{
     border-radius: 15px;
     cursor: pointer;
     font-size: 1rem;
+    transition: box-shadow 0.2s;
+}
+div.service div.card a:hover{
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
 }
 section.section-vantagens ul.grid-img{
     display: flex;
@@ -361,6 +370,18 @@ section.newsletter a{
     border-radius: 20px 0px;
     cursor: pointer;
     font-size: 1.2rem;
+    animation: pulse 1s infinite; /* Aplica a animação pulse ao botão */
+}
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
 @media (max-width: 700px){
     section.section-vantagens .grid-img{
